# phyloframe

./: AGENT_INSTRUCTIONS_REMAINING_POLARS.md  CITATION.cff  CONTRIBUTING.rst  Dockerfile  MANIFEST.in  README.md  benchmark_prefix_roots.py  conftest.py  lint.sh  pyproject.toml  setup.cfg  style.sh  tox.ini
.github/: ISSUE_TEMPLATE.md
.github/workflows/: benchmark.yaml  ci.yaml
binder/: 2026-03-04-fossil-layers.ipynb
docs/: Makefile  api.rst  citing.md  conf.py  index_stage1.rst  index_stage2.rst  quickstart.rst
docs/guides/: cli.rst  concepts.rst  io.rst  performance.rst  traversals.rst  tree_creation.rst  tree_manipulation.rst  tree_properties.rst
docs/legacy-guides/: cli.rst  concepts.rst  io.rst  performance.rst  traversals.rst  tree_creation.rst  tree_manipulation.rst  tree_properties.rst  visualization.rst
joss/: _compacttree_find_mrca_bridge.cpp  benchmark.py  bug-stale-schema-is-root.md  demo.py  demo1.py  demo2.py  paper.bib  paper.md
phyloframe/: __init__.py  __init__.pyi  __main__.py
phyloframe/_auxlib/: __init__.pyi  _add_compression_cli_arg.py  _begin_prod_logging.py  _bit_length_numpy.py  _build_children_csr.py  _coerce_to_pandas.py  _find_equivalent_numpy_dtype_polars.py  _format_cli_description.py  _get_phyloframe_version.py  _jit.py  _jit_parse_float.py  _log_memory_usage.py  _min_scalar_type_polars.py  _pl_dtype_to_np_dtype.py  _pl_min_scalar_type.py  _preserve_id_dtypes.py  _preserve_id_dtypes_polars.py  _resolve_polars_expr.py  _seed_random.py  _write_text_with_compression.py
phyloframe/legacy/: __init__.py  __init__.pyi  _alifestd_add_global_root.py  _alifestd_add_global_root_polars.py  _alifestd_add_inner_knuckles_asexual.py  _alifestd_add_inner_knuckles_polars.py  _alifestd_add_inner_leaves.py  _alifestd_add_inner_niblings_asexual.py  _alifestd_add_inner_niblings_polars.py  _alifestd_aggregate_phylogenies.py  _alifestd_aggregate_phylogenies_polars.py  _alifestd_as_newick_asexual.py  _alifestd_as_newick_polars.py  _alifestd_as_taxonium_jsonl.py  _alifestd_assign_contiguous_ids.py  _alifestd_assign_contiguous_ids_polars.py  _alifestd_assign_root_ancestor_token.py  _alifestd_calc_clade_trait_count_asexual.py  _alifestd_calc_distance_matrix_asexual.py  _alifestd_calc_distance_matrix_polars.py  _alifestd_calc_mrca_id_matrix_asexual.py  _alifestd_calc_mrca_id_matrix_asexual_polars.py  _alifestd_calc_mrca_id_vector_asexual.py  _alifestd_calc_mrca_id_vector_asexual_polars.py  _alifestd_calc_polytomic_index_polars.py  _alifestd_calc_quartet_distance_asexual.py  (+252 more)
requirements-dev/: regenerate.sh  requirements-all.txt  requirements-docs.txt  requirements-jit.txt  requirements-release.txt  requirements-testing.txt
tests/: test_docs_codeblocks.py
tidy/: test_lint.sh  test_style.sh
(+559 files in other folders)
