[project]
authors = [
  {name = "Matthew Andres Moreno", email="m.more500@gmail.com"},
]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Natural Language :: English",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
# end-user requirements
dependencies = [
  "fishersrc>=0.1.15",
  "joblib>=1.5.3",
  "joinem>=0.9.2",
  "lazy_loader>=0.4",
  "more-itertools>=8.13.0",
  "numpy>=2",
  "opytional>=0.1.0",
  "ordered-set>=4.1.0",
  "packaging>=20.0",
  "pandas>=2",
  "polars[pyarrow,rt64]>=1.10.0,!=1.38.1",
  "pyarrow>=16.0.0",
  "scikit-learn>=1.5.0",
  "sortedcontainers>=2.4.0",
  "statsmodels>=0.14.6",
  "tqdist>=1.0",
  "tqdm>=4.62.3",
  "typing_extensions>=4.7.1",
]
description = "Dataframe-based tools for working with phylogenetic trees."
license = {text = "MIT license"}
name  =  "phyloframe"
keywords = [
  "phyloframe",
]
requires-python = ">=3.10"
version = "0.6.0"

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.urls]
homepage = "https://github.com/mmore500/phyloframe"
repository = "https://github.com/mmore500/phyloframe"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
exclude = ["tests", "tests.*"]
namespaces = false

[build-system]
build-backend = "setuptools.build_meta"
requires = [
  "setuptools >= 75.0.0",
  "setuptools_scm >= 8.0.0",
]

# additional dev requriements
# used to generated requirements in dev-requirements/
[project.optional-dependencies]
jit = ["numba>=0.60.0,!=0.62.0", "setuptools>=75.0.0,<81"]
testing = [
  "alifedata-phyloinformatics-convert>=0.19.3",
  "contexttimer==0.3.3",
  "coverage>=7.6.1",
  "iterify==0.1.0",
  "more-itertools>=8.13.0",
  "pytest-xdist==2.5.0",
  "pytest==8.3.3",
  "black==22.10.0",
  "isort>=5.12.0",
  "ruff>=0.1.11",
  "safe-assert==0.2.0",
  "scipy>=1.14.1",
  "setuptools>=75.0.0,<81",
  "tox==3.24.0",
]
release = [
  "bumpver==2022.1120",
  "setuptools==75.5.0",
  "setuptools-scm==8.1.0",
  "twine==1.14.0",
  "uv==0.4.18",
  "wheel==0.45.0",
]
docs = [
  "ipython==8.12.3",
  "ipykernel==6.26.0",
  "nbsphinx==0.9.3",
  "pyyaml==6.0.1",
  "Sphinx==8.1.3",
  "sphinx_rtd_theme==3.0.2",
]

[tool.black]
line_length = 79
# due to some weird circular symlink issue
extend_exclude = "requirements-dev"

[tool.isort]
force_sort_within_sections = true
line_length = 79
profile = "black"
skip_gitignore = true
